# MIO

./: CMakeLists.txt  README.md
ClasseSkeletonTest/: Bone.cpp  Bone.h  Frame.cpp  Frame.h  Skeleton.cpp  Skeleton.h  Starter.cpp  bone.h  kneecap.h  skeleton.h
GL_widget/: GL_Widget.pro  glcube.h  glskeleton.cpp  glskeleton.h  glstream.cpp  glstream.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  window.cpp  window.h
MIO_Client/: MIO_Client.pro  main.cpp  miowindow.cpp  miowindow.h  startwindow.cpp  startwindow.h
MIO_Client/chat_widget/: chatwidget.h  chatwidget.ui
MIO_Client/gl_widget/: glcube.h  glplane.h  (+5 more)
MIO_Server/: MIO_Serveur.icns  MIO_Serveur.pro  MIO_Serveur.pro.user.6df6035  main.cpp  mionetwork.cpp  mionetwork.h  miowindow.cpp  miowindow.h  settingswindow.cpp  settingswindow.h  startwindow.cpp  startwindow.h
MIO_TEST/: main.cpp  miowindow.cpp  miowindow.h  settingswindow.cpp  settingswindow.h
TestApp/: .directory  Testapp.pro  main.cpp  mainwindow.h  window.cpp
build-GL_Widget-Desktop-Debug/: GL_Widget  Makefile  moc_glwidget.cpp  moc_mainwindow.cpp  moc_window.cpp
build-MIO_Client-Desktop-Debug/: Makefile  moc_Starter.cpp  moc_chatwidget.cpp  moc_glwidget.cpp  moc_logwidget.cpp  moc_miowindow.cpp  moc_predefs.h  moc_settingswindow.cpp  moc_startwindow.cpp  ui_chatwidget.h
build-MIO_Serveur-Desktop-Debug/: Makefile  moc_Starter.cpp  moc_chatwidget.cpp  moc_glwidget.cpp  moc_logwidget.cpp  moc_mionetwork.cpp  moc_miowindow.cpp  moc_settingswindow.cpp  moc_startwindow.cpp
linux_sdk/: ViconDataStreamSDK_CPPTest.cpp
(+56 files in other folders)
